appId: ${APP_ID}
env:
  Name: User
  EMAIL: user@test.com
  PASSWORD: password
tags:
  - util
---
- tapOn:
    id: name
- inputText: ${Name}
- tapOn:
    id: email-input
- inputText: ${EMAIL}

- tapOn:
    id: password-input
- inputText: ${PASSWORD}

- tapOn:
    id: login-button

